--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,77 @@ main {
 
  .card {
      display: flex;
-     background: linear-gradient(to left top, rgba(255,255,255,1), rgba(255,255,255,0.8));
+     background: linear-gradient(to left top, rgba(255,255,255,0.8), rgba(255,255,255,0.5));
      margin: 2rem 0;
      border-radius: 1rem;
      padding: 2rem;
-     box-shadow: 7px 7px 20px rgba(122,122,122,0.3);
+     box-shadow: 7px 7px 20px rgba(122,122,122,0.212);
+     justify-content: space-between;
+ }
+
+ .card-info {
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+ }
+
+ .progress {
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    width: 100%;
+    height: 25%;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+ }
+
+ .progress2 {
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    width: 100%;
+    height: 25%;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+ }
+
+ .progress3 {
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    width: 100%;
+    height: 25%;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+ }
+
+ .progress::after {
+     content: "";
+     width: 100%;
+     height: 100%;
+     background: rgb(236,236,237);
+     position: absolute;
+     left: 40%;
+ }
+
+ .progress2::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgb(236,236,237);
+    position: absolute;
+    left: 60%;
+}
+
+.progress3::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgb(236,236,237);
+    position: absolute;
+    left: 80%;
+}
+
+ .percentage {
+     font-weight: bold;
+     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
  }
