--- a/styles.css
+++ b/styles.css
@@ -208,5 +208,6 @@ main {
      font-weight: bold;
      background: linear-gradient(to right top, #65dfc9, #6cdbeb);
      -webkit-background-clip: text;
-     -webkit-text-fill-color: transparent;
+     /* -webkit-text-fill-color: transparent; */
+     color: transparent;
  }
